--- a/about/index.html
+++ b/about/index.html
@@ -20,7 +20,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-    <title>Tesla - A Pero</title>
+    <title>Aftab Ashrafi</title>
   </head>
   <body>
 
@@ -35,15 +35,14 @@
             <ul id="menu">
               <a href="../index.html"><li>Home</li></a>
               <a href="#"><li>About</li></a>
-                <a href="https://t.me/tesla59/" target="_blank"><li>Telegram</li></a>
-              <a href="../contact/index.html"><li>Contact</li></a>
+              <a href="https://linkedin.com/in/aftab-ashrafi" target="_blank"><li>Linkedin</li></a>
               <a href="../projects/index.html"><li>Projects</li></a>
             </ul>
           </div>
         </nav>
         <div class="row align-items-centre header">
         <div class="col-12 col-md-6">
-            <img src="../img/tesla.jpg" alt="" class="profile-pic">
+            <img src="../img/aftab.svg" alt="" class="profile-pic">
         </div>
         <div class="col-12 col-md-6">
             <div class="about-me-para">Experienced Proposal Engineer with a demonstrated history of working in the mechanical and instrumentation engineering industry. Skilled in Microsoft Office, Customer Service, Engineering, Presentations, and Strategy. Strong operations professional with a Bachelor of Engineering focused in Mechanical Engineering from LDRP Institute of Technology & Research.</div>
