--- a/index.html
+++ b/index.html
@@ -39,21 +39,21 @@
             <ul id="menu">
               <a href="#"><li>Home</li></a>
               <a href="about/index.html"><li>About</li></a>
-              <a href="https://t.me/aftab_111/" target="_blank"><li>Telegram</li></a>
-              <a href="contact/index.html"><li>Contact</li></a>
-                <a href="projects/index.html"><li>Projects</li></a>
+              <a href="https://linkedin.com/in/aftab-ashrafi" target="_blank"><li>Linkedin</li></a>
+              <a href="projects/index.html"><li>Projects</li></a>
             </ul>
           </div>
         </nav>
         <div class="row align-items-centre header">
         <div class="col-12 col-md-6 order-md-2">
-          <img src="img/aftab.jpg" alt="" class="profile-pic">
+          <img src="img/aftab.svg" alt="" class="profile-pic">
         </div>
         <div class="col-12 col-md-6 order-md-1"><div class="name">Hey, I'm Aftab</div>
         <div class="about-me">A Mechanical Engineer</div>
         <div class="socialmediao">
-            <a href="http://instagram.com/_.a_f_t_a_b._" target="_blank"><img src="img/social/instagram.svg" alt="" class="socialmedia"></a>
+            <a href="mailto:aftabashrafi111@outlook.com?subject=Saying Hello!!!" target="_blank"><img src="img/social/email.svg" alt="" class="socialmedia"></a>
             <a href="http://github.com/aftab-111/" target="_blank"><img src="img/social/github.svg" alt="" class="socialmedia"></a>
+            <a href="https://linkedin.com/in/aftab-ashrafi" target="_blank"><img src="img/social/linkedin.svg" alt="" class="socialmedia"></a>
             <a href="http://t.me/aftab_111/" target="_blank"><img src="img/social/telegram.svg" alt="" class="socialmedia"></a>
         </div>
       </div>
