--- a/projects/index.html
+++ b/projects/index.html
@@ -35,8 +35,7 @@
             <ul id="menu">
               <a href="../index.html"><li>Home</li></a>
               <a href="#"><li>About</li></a>
-                <a href="https://t.me/aftab_111/" target="_blank"><li>Telegram</li></a>
-              <a href="../contact/index.html"><li>Contact</li></a>
+              <a href="https://linkedin.com/in/aftab-ashrafi" target="_blank"><li>Linkedin</li></a>
               <a href="#"><li>Projects</li></a>
             </ul>
           </div>
