--- a/about/index.html
+++ b/about/index.html
@@ -42,62 +42,58 @@
         </nav>
         <div class="row align-items-centre header">
         <div class="col-12 col-md-6">
-            <img src="../img/aftab.svg" alt="" class="profile-pic">
+        <img src="../img/aftab.svg" alt="" class="profile-pic">
         </div>
         <div class="col-12 col-md-6">
-            <div class="about-me-para">Experienced Proposal Engineer with a demonstrated history of working in the mechanical and instrumentation engineering industry. Skilled in Microsoft Office, Customer Service, Engineering, Presentations, and Strategy. Strong operations professional with a Bachelor of Engineering focused in Mechanical Engineering from LDRP Institute of Technology & Research.</div>
+        <div class="about-me-para">I’m an Experienced Proposal Engineer with a demonstrated history of working in the mechanical and instrumentation engineering industry. And a strong sales professional with a Bachelor of Engineering focused in Mechanical Engineering from LDRP Institute of Technology & Research. Apart from that, I like to mess with my smartphone and create new things in my free time.</div>
         </div>
-      </div>
-      <div class="downarrow">
+        </div>
+        <div class="downarrow">
         <a href="#aboutme"><h4 class="fadeInDown" aria-hidden="true">👇</h4></a>
       </div>
-    </div>
+      </div>
 
     <div class="skills" id="skills">
         <div class="skills-heading wow fadeInDown">My skills</div>
         <div class="container">
-          <div class="row align-items-center">
+        <div class="row">
               <div class="col-12 col-md-4 skillop">
-                <div class="fron-end-logos-imgs">
-                        <img src="../img/skills/front-end logos.svg" alt="front-end-skills" class="front-end-logos">
-                      </div>
-                        <div class="front_end_skills wow fadeInUp">
-                          <p class="front_skills">As of now, I am highly passionated
-                            about front-end web development.
-                            In order to design fully responsive
-                            website I use HTML5,CSS,CSS Flexbox
-                            and sometimes I take help of Bootstrap 4 framework.</p>
-                        </div>
-                        <div class="fron-end-logos-imgs">
-                        <img src="../img/skills/ui_design logos.svg" alt="ui-skills" class="front-end-logos">
-                        </div>
-                        <div class="front_end_skills wow fadeInUp">
-                          <p class="front_skills">Hey ! I not only design webpages but also design mobile apps and as my design weapon i use Adobe XD, Figma and Gravit Designer to design user-interface, flowcharts and wireframes.</p>
-                        </div>
-                      </div>
+              <div class="fron-end-logos-imgs">
+              <img src="../img/skills/office.svg" alt="front-end-skills" class="front-end-logos">
+              </div>
+              <div class="front_end_skills wow fadeInUp">
+              <p class="front_skills">I am highly proficient with Microsoft Office suite which includes tools like MS Excel, MS Word, PowerPoint presentations along with outlook and many more. I also own a LinkedIn skill assessment badge for MS Excel & Outlook. I also have good knowledge about Acrobat Adobe reader.</p>
+              </div>
+              <div class="fron-end-logos-imgs">
+              <img src="../img/skills/git.svg" alt="ui-skills" class="front-end-logos">
+              </div>
+              <div class="front_end_skills wow fadeInUp">
+              <p class="front_skills">As I employ my free time to Android Opensource Development, I learn a lot of super exciting skills along the way. And few of them are like a deep knowledge of git usage which includes several platforms like GitHub, GitLab, and many more. I also have a grip working with Linux machines.</p>
+              </div>
+              </div>
 
                       <div class="col-12 col-md-4">
-                          <div class="fron-end-logos-imgs">
-                        <img src="../img/skills/othrt_langauage_logo.svg" alt="other-skills" class="front-end-logos">
-                          </div>
-                        <div class="front_end_skills wow fadeInUp">
-                          <p class="front_skills">Other than JavaScript, HTML, CSS.. I also know basics of Java and Python.I have also created an virtual voice assistant using python programming language.</p>
-                        </div>
-
-                        <div class="fron-end-logos-imgs">
-                        <img src="../img/skills/back_end logos.svg" alt="back-end-skills" class="front-end-logos">
-                        </div>
-                        <div class="front_end_skills wow fadeInUp">
-                          <p class="front_skills">If we talk about my goal in near feature then it is to become a full stack web developer.As i am super excited to learn React.js,Vue.js,Node.js, AngularJS, Express, MangoDB and Django.</p>
-                        </div>
+                      <div class="fron-end-logos-imgs">
+                      <img src="../img/skills/cad.svg" alt="other-skills" class="front-end-logos">
+                      </div>
+                      <div class="front_end_skills wow fadeInUp">
+                      <p class="front_skills">I am highly passionate about designing and creating tools like AutoCAD, Solid Works, PTC Creo, Inkscape, and many more. In fact, a lot of Inkscape work is involved to create this website. I also do have a working knowledge of several portals like SAP, Ariba, GEM, etc.</p>
+                      </div>
+                      <div class="fron-end-logos-imgs">
+                      <img src="../img/skills/gcp.svg" alt="back-end-skills" class="front-end-logos">
+                      </div>
+                      <div class="front_end_skills wow fadeInUp">
+                      <p class="front_skills">Hey! I not only work with physical machines but as the AOSP development requires a lot of heavy resources. I also developed skills to use a virtual machine, which includes famous providers like Amazon Web Service, Google Cloud, Jenkins, Azure, and many more.</p>
+                      </div>
                       </div>
 
                 <div class="col-12 col-md-4 wow fadeInRight">
-                  <img class="skills_illustration" src="../img/skills/illustartion_skills.svg"  alt="skills_illustration">
-          </div>
+                <div class="align-items-center">
+                <img class="skills_illustration" src="../img/skills/illustartion_skills.svg"  alt="skills_illustration">
         </div>
-      </div>
-      </div>
+        </div>
+        </div>
+        </div>
 
 <script src='js/style.js'></script>
 </div>
