--- a/about/index.html
+++ b/about/index.html
@@ -45,7 +45,7 @@
         <img src="../img/aftab.svg" alt="" class="profile-pic">
         </div>
         <div class="col-12 col-md-6">
-        <div class="about-me-para">I’m an Experienced Proposal Engineer with a demonstrated history of working in the mechanical and instrumentation engineering industry. And a strong sales professional with a Bachelor of Engineering focused in Mechanical Engineering from LDRP Institute of Technology & Research. Apart from that, I like to mess with my smartphone and create new things in my free time.</div>
+        <div class="about-me-para">I'm an Experienced Proposal Engineer with a track record of success in the mechanical and instrumentation engineering fields. And a strong mechanical professional with a Bachelor of Engineering from LDRP Institute of Technology & Research. Aside from that, in my spare time, I enjoy tinkering with my smartphone and inventing new stuff.</div>
         </div>
         </div>
         <div class="downarrow">
@@ -62,13 +62,13 @@
               <img src="../img/skills/office.svg" alt="front-end-skills" class="front-end-logos">
               </div>
               <div class="front_end_skills wow fadeInUp">
-              <p class="front_skills">I am highly proficient with Microsoft Office suite which includes tools like MS Excel, MS Word, PowerPoint presentations along with outlook and many more. I also own a LinkedIn skill assessment badge for MS Excel & Outlook. I also have good knowledge about Acrobat Adobe reader.</p>
+              <p class="front_skills">I am well-versed in the Microsoft Office suite, which includes products such as MS Excel, MS Word, PowerPoint presentations, Outlook, and many more. I also have a LinkedIn skill evaluation badge for MS Excel and Outlook. I am also well-versed in Acrobat Adobe Reader.</p>
               </div>
               <div class="fron-end-logos-imgs">
               <img src="../img/skills/git.svg" alt="ui-skills" class="front-end-logos">
               </div>
               <div class="front_end_skills wow fadeInUp">
-              <p class="front_skills">As I employ my free time to Android Opensource Development, I learn a lot of super exciting skills along the way. And few of them are like a deep knowledge of git usage which includes several platforms like GitHub, GitLab, and many more. I also have a grip working with Linux machines.</p>
+              <p class="front_skills">As I devote my leisure time to Android Opensource Development, I pick up a slew of fascinating new talents. And a handful of them, for example, have extensive understanding of git use, which encompasses platforms such as GitHub, GitLab, and many more. I also have experience with Linux computers.</p>
               </div>
               </div>
 
@@ -77,13 +77,13 @@
                       <img src="../img/skills/cad.svg" alt="other-skills" class="front-end-logos">
                       </div>
                       <div class="front_end_skills wow fadeInUp">
-                      <p class="front_skills">I am highly passionate about designing and creating tools like AutoCAD, Solid Works, PTC Creo, Inkscape, and many more. In fact, a lot of Inkscape work is involved to create this website. I also do have a working knowledge of several portals like SAP, Ariba, GEM, etc.</p>
+                      <p class="front_skills">I am quite enthusiastic about building and developing technologies like as AutoCAD, Solid Works, PTC Creo, Inkscape, and many more. In reality, a significant amount of Inkscape work is required to make this website. I also have working knowledge of numerous portals like as SAP, Ariba, GEM, and others.</p>
                       </div>
                       <div class="fron-end-logos-imgs">
                       <img src="../img/skills/gcp.svg" alt="back-end-skills" class="front-end-logos">
                       </div>
                       <div class="front_end_skills wow fadeInUp">
-                      <p class="front_skills">Hey! I not only work with physical machines but as the AOSP development requires a lot of heavy resources. I also developed skills to use a virtual machine, which includes famous providers like Amazon Web Service, Google Cloud, Jenkins, Azure, and many more.</p>
+                      <p class="front_skills">Hey! I not only deal with physical computers, but AOSP development need a large number of heavy resources. I also learned how to operate a virtual machine, which includes well-known providers such as Amazon Web Service, Google Cloud, Jenkins, Azure, and many more.</p>
                       </div>
                       </div>
 
