Projects Initial Changes

--- a/projects/index.html
+++ b/projects/index.html
@@ -41,36 +41,36 @@
           </div>
         </nav>
                 <div class="projects" id="projects">
-                  <div class="h1 code-work">Code Stuff</div>
+                  <div class="h1 code-work">Projects</div>
                     <div class="container">
                       <div class="row">
 
                         <div class="col">
-                          <a href="https://play.google.com/store/apps/details?id=com.electronlabs.walldrops">
+                          <a href="https://www.hrrl.in/aboutus">
                           <div class="portfolio-code">
-                         <img src="../img/project/walldrops.svg" class="code-work-img">
-                         <div class="project_heading-code">WallDrops</div>
-                         <p class="code-stuff">Walldrops is a wallpaper application that comes with more than 10K+ wallpapers out of the box.</p>
+                         <img src="../img/project/hrrl.svg" class="code-work-img">
+                         <div class="project_heading-code">PFCCU - HRRL Refinary</div>
+                         <p class="code-stuff">Supply of temperature gauges with Thermowells at the HRRL Rajasthan refinery, with L&T Hydrocarbon contributing as an engineering consultant and EIL representing as the project manager.</p>
                       </div>
                     </a>
                         </div>
 
                         <div class="col">
-                          <a href="https://iamharsh.design/neutron/">
+                          <a href="https://iocl.com/pages/panipat-refinery#:~:text=Panipat%20Refinery%20is%20lndianOil's%20seventh,not%20only%20in%20Haryana%2C%20but">
                           <div class="portfolio-code">
-                         <img src="../img/project/mac-neutron.svg" class="code-work-img">
-                         <div class="project_heading-code">Neutron-Code Editor</div>
-                         <p class="code-stuff">Neutron is a code editor that support web technologies and shows the preview in realtym just like codepen.io .</p>
+                         <img src="../img/project/iocl.svg" class="code-work-img">
+                         <div class="project_heading-code">IndResidH Demonstration Plant at IOCL, Panipat</div>
+                         <p class="code-stuff">Supply of pressure, differential pressure, and temperature gauges, as well as thermowells, to our OEM customer Dresser Rand India Pvt Ltd, with IBR and NACE certification.</p>
                       </div>
                     </a>
                         </div>
 
                         <div class="col">
-                          <a href="https://github.com/theuitown/joe_voice_assistant.py">
+                          <a href="http://www.gemlikgubre.com.tr/Sayfa-15-about-us.html">
                           <div class="portfolio-code">
-                         <img src="../img/project/joe.svg" class="code-work-img">
-                         <div class="project_heading-code">Joe Assistant</div>
-                        <p class="code-stuff">Joe is a virtual voice assistant developed in python and it can answer your any question.</p>
+                         <img src="../img/project/gemlik.svg" class="code-work-img">
+                         <div class="project_heading-code">Urea & UAN Plant at Gemlik Gübre, Turkey</div>
+                        <p class="code-stuff">Supply of ATEX certified solid front pressure gauges and accessories to our OEM customer Flowserve Sanmar Ltd, with Tecnimont serving as the EPC contractor.</p>
                       </div>
                       </a>
                         </div>
@@ -78,30 +78,30 @@
                         <div class="w-100"></div>
 
                         <div class="col">
-                          <a href="https://snack.expo.io/@electronlabs/customising">
+                          <a href="https://www.itcportal.com/businesses/paperboards-and-specialty-papers.aspx">
                           <div class="portfolio-code">
-                         <img src="../img/project/login-react.svg" class="code-work-img">
-                         <div class="project_heading-code">Login App</div>
-                        <p class="code-stuff">Clean and minimal Registation app made in react native.</p>
+                         <img src="../img/project/itc.svg" class="code-work-img">
+                         <div class="project_heading-code">Pulp Production extension project at ITC Ltd, Secunderabad</div>
+                        <p class="code-stuff">Supply of Pressure gauge with diaphragm seal and temperature gauge with screwed thermowells.</p>
                       </div>
                       </a>
                         </div>
                         <div class="col">
-                          <a href="https://iamharsh.dev/crux">
+                          <a href="https://modelebd.com/?wings=etp">
                           <div class="portfolio-code">
-                         <img src="../img/project/crux-landing-page.svg" class="code-work-img">
-                         <div class="project_heading-code">CRUX Landing Page</div>
-                        <p class="code-stuff">Clean and minimal responsive mobile app landing page based on Bootstrap 4.</p>
+                         <img src="../img/project/suez.svg" class="code-work-img">
+                         <div class="project_heading-code">Effluent Treatment Plant</div>
+                        <p class="code-stuff">We provided Modele De Capital Industries Limited with a pressure switch and a pressure gauge with a diaphragm seal assembly through our OEM customer Suez Water Technologies.</p>
                       </div>
                       </a>
                         </div>
 
                         <div class="col">
-                          <a href="https://dribbble.com/shots/6546168-Google-Maps-Minimal-UI-Redesign">
+                          <a href="https://arrowos.net/">
                           <div class="portfolio-code">
-                         <img src="../img/project/GMAPS.svg" class="code-work-img">
-                         <div class="project_heading-code">GMAP Redesign</div>
-                        <p class="code-stuff">Minimal redesign of Google Maps inspired from UBER Design.</p>
+                         <img src="../img/project/arrow.svg" class="code-work-img">
+                         <div class="project_heading-code">Arrow OS</div>
+                        <p class="code-stuff">ArrowOS is an AOSP based OS project started with the aim of keeping things simple, clean and neat.</p>
                       </div>
                       </a>
                         </div>
