--- a/projects/index.html
+++ b/projects/index.html
@@ -34,7 +34,7 @@
 
             <ul id="menu">
               <a href="../index.html"><li>Home</li></a>
-              <a href="#"><li>About</li></a>
+              <a href="../about/index.html"><li>About</li></a>
               <a href="https://linkedin.com/in/aftab-ashrafi" target="_blank"><li>Linkedin</li></a>
               <a href="#"><li>Projects</li></a>
             </ul>
@@ -59,7 +59,7 @@
                           <a href="https://iocl.com/pages/panipat-refinery#:~:text=Panipat%20Refinery%20is%20lndianOil's%20seventh,not%20only%20in%20Haryana%2C%20but">
                           <div class="portfolio-code">
                          <img src="../img/project/iocl.svg" class="code-work-img">
-                         <div class="project_heading-code">IndResidH Demonstration Plant at IOCL, Panipat</div>
+                         <div class="project_heading-code">IndResidH Plant at IOCL, Panipat</div>
                          <p class="code-stuff">Supply of pressure, differential pressure, and temperature gauges, as well as thermowells, to our OEM customer Dresser Rand India Pvt Ltd, with IBR and NACE certification.</p>
                       </div>
                     </a>
